# stackwizard

./: .eslintrc.json  .gitignore  .npmignore  .npmrc-github  AUTHENTICATION_README.md  CHANGELOG.md  CHANGELOG_UPDATE.md  CLAUDE.md  CYPRESS-TESTING.md  LICENSE  Makefile  NPM_PUBLICATION_GUIDE.md  PROJECT_MANAGEMENT.md  README-OLD.md  README.md  README_PL.md  ROADMAP.md  SCRIPTS.md  SPRINTS.md  TESTING.md  VALIDATION.md  cypress.config.js  docker-compose.test.yml  eslint.config.js  package-lock.json  package.json  pre-push-validator.js  test-generate.sh  test-orchestrator.js
kedro-pipeline/: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
kedro-pipeline/conf/base/: catalog.yml  parameters.yml
kedro-pipeline/conf/ci/: parameters.yml
kedro-pipeline/conf/local/: parameters.yml
kedro-pipeline/kedro-env/: pyvenv.cfg
kedro-pipeline/src/stackwizard_pipeline/: __init__.py  hooks.py  pipeline_registry.py  settings.py
kedro-pipeline/src/stackwizard_pipeline/nodes/: __init__.py  database_init.py  docker_tests.py  e2e_tests.py  package_tests.py  structure_tests.py  validation.py
kedro-pipeline/src/stackwizard_pipeline/pipelines/: __init__.py  database_pipeline.py  test_pipeline.py  validation_pipeline.py
src/: errors.js  (+1 more)
templates/common/backend/: .claude-protect.json  CLAUDE.md  Dockerfile  GITHUB-PROTECTION.md  PROTECTION-README.md  README_TESTING.md  REFACTORING_SUMMARY.md  SECURITY_INTEGRATION.md  SERVICE_LAYER_REFACTORING.md  alembic.ini  fix_auth_tests.py  pyproject.toml  requirements-py313.txt  requirements-test.txt  requirements.txt  run_integration_tests.sh  run_tests.sh  setup-github-protection.sh  setup-protection.sh  test_results.txt
templates/common/backend/.githooks/: pre-commit
templates/common/backend/.github/: branch-protection.json  dependabot.yml  labeler.yml
templates/common/backend/.github/workflows/: ci.yml  pr-protection.yml
templates/common/backend/alembic/: env.py
templates/common/backend/alembic/versions/: 001_initial_migration.py  001_initial_user_table.py  002_add_item_fields.py  002_add_items_table.py
templates/common/backend/app/: main.py
templates/common/backend/app/api/: health.py  items.py  users.py
templates/common/backend/app/core/: config.py  dependencies.py  exceptions.py
templates/common/backend/app/crud/: item.py  user.py
templates/common/backend/app/db/: database.py  init_db.py
templates/common/backend/scripts/: migrate.py  seed_data.py
templates/common/backend/tests/: conftest.py  db_adapter.py  test_admin.py  test_api_structure.py  test_auth.py  test_config.py  test_integration.py  test_models.py  test_my_account.py  test_no_eslint_warnings.py  test_schemas.py  test_user_service.py  test_users.py
(+229 files in other folders)
